synch to rlauxe version 0.9.2
integrate dhondt features